# echoserver

./: README.md
app/: Cargo.toml  Dockerfile  Taskfile.yaml
app/chart/: Chart.yaml  values.yaml
app/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
app/config/: echo.yaml
app/src/: main.rs
app/src/configuration/: config.rs
app/src/observability/: observability.rs
app/src/services/: handler.rs  model.rs
app/src/tests/: mod.rs  test.rs
