[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# below are opentelemetry libraries
actix-web-opentelemetry = { version = "0.12", features = ["metrics"] }
opentelemetry = { version = "0.17", features = ["metrics", "tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["tokio"] }
opentelemetry-prometheus = "0.10"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
